Prevent blank code lines from collapsing.

--- a/generators/handlebars/template/public/kss.less
+++ b/generators/handlebars/template/public/kss.less
@@ -460,6 +460,7 @@
     list-style-type: none;
 
     li {
+      min-height: @kss-vertical-rhythm;
       border-bottom: 1px solid #eee;
       padding: 0 10px;
       background: #fff;
